fix(#4260): Width of Notification overflows in small screens

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -473,6 +473,14 @@
   }
 }
 
+@media (max-width: 768px) {
+
+  .dropdown-notification {
+    max-width: 450px;
+    width: auto;
+  }
+}
+
 // notification page
 .notification-icon {
   font-size: 20px;
